immich/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: immich
  namespace: immich
spec:
  tls:
    - hosts:
        - immich.traunseenet.com
      secretName: letsencrypt-prod
  ingressClassName: traefik
  rules:
    - host: immich.traunseenet.com
      http:
        paths:
          - backend:
              service:
                name: immich-server
                port:
                  number: 3001
            path: /
            pathType: Prefix
